--- a/Steam/Views/Home/Index.cshtml
+++ b/Steam/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 <link href="~/Content/Home.css" rel="stylesheet" />
 @{
     ViewBag.Title = "Home";
+    List<Game> games = Model.GetAllGames();
     Random r = new Random();
 }
 <br>
@@ -13,12 +14,12 @@
         <div class="row">
             @for (int i = 0; i < 3; i++)
             {
-                int index = r.Next(1, Model.games.Count());
+                int index = r.Next(1, games.Count());
                 <div class="col-md-4">
-                    <a href="@Url.Action("Details", "Store", new { id = Model.games[index].ID} )"><img src=@Model.games[index].IMGUrl height="170"></a>
-                    <h2>@Model.games[index].Naam</h2>
+                    <a href="@Url.Action("Details", "Store", new { id = @games[index].ID} )"><img src=@games[index].IMGUrl height="170"></a>
+                    <h2>@games[index].Naam</h2>
                 </div>
-                Model.games.RemoveAt(index);
+                games.RemoveAt(index);
             }
         </div>
     </div>
