--- a/Steam/Views/Store/Index.cshtml
+++ b/Steam/Views/Store/Index.cshtml
@@ -13,9 +13,9 @@
 <table class="table">
     <tr>
         <td></td>
-        <td><a href="" >Naam</a></td>
-        <td>Prijs</td>
-        <td>Sterren</td>
+        <td><a href="@Url.Action("Compare", "Store", new { comparer = "naam"} )">Naam</a></td>
+        <td><a href="@Url.Action("Compare", "Store", new { comparer = "prijs"} )">Prijs</a></td>
+        <td><a href="@Url.Action("Compare", "Store", new { comparer = "sterren"} )">Sterren</a></td>
     </tr>
     
     @foreach (Game game in Model.games)
@@ -31,7 +31,7 @@
                 €@game.Prijs
             </td>
             <td>
-                @game.Sterren
+                Sterren: @game.Sterren
             </td>
         </tr>
     }
