--- a/Steam/Views/Home/Index.cshtml
+++ b/Steam/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <link href="~/Content/Home.css" rel="stylesheet" />
 @{
     ViewBag.Title = "Home";
-    List<Game> games = Model.GetAllGames();
+    List<Game> games = Model.games;
     Random r = new Random();
 }
 <br>
