--- a/Steam/Views/Shared/_Layout.cshtml
+++ b/Steam/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     }
                     else if (account is Beheerder)
                     {
-
+                        <li>@Html.ActionLink("Uitloggen", "Uitloggen", "Inlog")</li>
                     }
                     else
                     {
