--- a/Steam/Views/Store/Details.cshtml
+++ b/Steam/Views/Store/Details.cshtml
@@ -63,7 +63,7 @@
 <br>
 <h2>Reviews</h2>
 <br>
-@if (Model.GetReviews(Model.ID).Count == 0)
+@if (Model.Reviews.Count == 0)
 {
     <p>Er zijn nog geen reviews voor deze game.</p>
 }
