Reviews worden niet meer dubbel opgeslagen

--- a/Steam/Views/Shared/_Layout.cshtml
+++ b/Steam/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     }
                     else if (account is Beheerder)
                     {
+                        <li>@Html.ActionLink("Game toevoegen", "GameToevoegen", "Store")</li>
                         <li>@Html.ActionLink("Uitloggen", "Uitloggen", "Inlog")</li>
                     }
                     else
