--- a/Steam/Views/Store/Toevoegen.cshtml
+++ b/Steam/Views/Store/Toevoegen.cshtml
@@ -6,7 +6,7 @@
 <h2>Game toevoegen</h2>
 
 <div class="position">
-    <form action="/Store/GameToevoegen" method="post">
+    <form action="/Store/GameToevoegenBevestigen" method="post">
         <br />
         <div class="form-group">
             <label for="naam">Naam</label>
@@ -18,15 +18,15 @@
         </div>
         <div class="form-group">
             <label for="beschrijving">Beschrijving</label>
-            <input type="password" class="form-control" name="beschrijving">
+            <input type="text" class="form-control" name="beschrijving">
         </div>
         <div class="form-group">
             <label for="imgurl">Image URL</label>
-            <input type="password" class="form-control" name="imgurl">
+            <input type="text" class="form-control" name="imgurl">
         </div>
         <div class="form-group">
             <label for="uitgeverID;">UitgeverID</label>
-            <input type="password" class="form-control" name="uitgeverID">
+            <input type="text" class="form-control" name="uitgeverID">
         </div>
         <button type="submit" class="btn btn-default">Bevestigen</button>
     </form>
