--- a/Steam/Views/Bibliotheek/Index.cshtml
+++ b/Steam/Views/Bibliotheek/Index.cshtml
@@ -10,20 +10,23 @@
     <br>
     <p>Je hebt geen games in je bibliotheek.</p>
 }
-<table class="table">
-    <tr>
-        <td></td>
-        <td><a href="@Url.Action("Compare", "Store", new { comparer = "naam"} )">Naam</a></td>
-    </tr>
-    @foreach (var game in speler.Games)
-    {
+else
+{
+    <table class="table">
         <tr>
-            <td>
-                <a href="@Url.Action("Details", "Store", new { id = game.ID} )"><img src=@game.IMGUrl height="150"></a>
-            </td>
-            <td>
-                @game.Naam
-            </td>
+            <td></td>
+            <td><a href="@Url.Action("Compare", "Store", new { comparer = "naam"} )">Naam</a></td>
         </tr>
-    }
-</table>
+        @foreach (var game in speler.Games)
+        {
+            <tr>
+                <td>
+                    <a href="@Url.Action("Details", "Store", new { id = game.ID} )"><img src=@game.IMGUrl height="150"></a>
+                </td>
+                <td>
+                    @game.Naam
+                </td>
+            </tr>
+        }
+    </table>
+}
